add new website from server na

--- a/xem-phim-bo/ban-trai-cu-la-sep-cua-toi/index.html
+++ b/xem-phim-bo/ban-trai-cu-la-sep-cua-toi/index.html
@@ -1185,7 +1185,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
              Lượt xem:
             </dt>
             <dd class="movie-dd">
-             5
+             6
             </dd>
             <br/>
            </dl>
@@ -1765,18 +1765,62 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
        <div class="right-box-content">
         <ul class="list-top-movie" id="list-top-film-week">
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/chuyen-tinh-cua-co-nang-trong-sang" title="Chuyện Tình Của Cô Nàng Trong Sáng">
+          <a class="list-top-movie-link" href="/phim-moi/doi-cuu-ho-tokyo-mer" title="Đội cứu hộ Tokyo MER">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/chuyen-tinh-cua-co-nang-trong-sang-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/doi-cuu-ho-tokyo-mer-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Chuyện Tình Của Cô Nàng Trong Sáng
+             Đội cứu hộ Tokyo MER
             </span>
             <span class="list-top-movie-item-en">
-             투명한 그녀 두번째 이야기
+             Tokyo MER: Mobile Emergency Room
+            </span>
+            <span class="list-top-movie-item-view">
+             2 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/vua-dau-bep-soma-phan-5" title="Vua đầu bếp Soma (Phần 5)">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/vua-dau-bep-soma-phan-5-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Vua đầu bếp Soma (Phần 5)
+            </span>
+            <span class="list-top-movie-item-en">
+             Food Wars!: Shokugeki no Soma (The Fifth Plate)
+            </span>
+            <span class="list-top-movie-item-view">
+             1 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/ban-than-de-tra-no-cho-chong" title="Bán Thân Để Trả Nợ Cho Chồng">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/ban-than-de-tra-no-cho-chong-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Bán Thân Để Trả Nợ Cho Chồng
+            </span>
+            <span class="list-top-movie-item-en">
+             아내의 몸빵
             </span>
             <span class="list-top-movie-item-view">
              3 lượt xem
@@ -1787,18 +1831,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/halfaouine-boy-of-the-terraces" title="Halfaouine: Boy of the Terraces">
+          <a class="list-top-movie-link" href="/phim-moi/bo-bim-sua-cuc-manh" title="Bố Bỉm Sữa Cực Mạnh">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/halfaouine-boy-of-the-terraces-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/bo-bim-sua-cuc-manh-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Halfaouine: Boy of the Terraces
+             Bố Bỉm Sữa Cực Mạnh
             </span>
             <span class="list-top-movie-item-en">
-             Halfaouine: Boy of the Terraces
+             Super Pacifier
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
@@ -1809,65 +1853,21 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/hoi-chung-tuoi-thanh-xuan-em-gai-xuat-hanh" title="Hội Chứng Tuổi Thanh Xuân: Em Gái Xuất Hành">
+          <a class="list-top-movie-link" href="/phim-moi/huy-diet-trai-dat" title="Hủy Diệt Trái Đất">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/hoi-chung-tuoi-thanh-xuan-em-gai-xuat-hanh-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/huy-diet-trai-dat-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Hội Chứng Tuổi Thanh Xuân: Em Gái Xuất Hành
+             Hủy Diệt Trái Đất
             </span>
             <span class="list-top-movie-item-en">
-             Rascal Does Not Dream of a Sister Venturing Out
+             Final Fantasy: The Spirits Within
             </span>
             <span class="list-top-movie-item-view">
-             0 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/the-parent-trap" title="The Parent Trap">
-           <span class="status">
-            HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/the-parent-trap-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             The Parent Trap
-            </span>
-            <span class="list-top-movie-item-en">
-             The Parent Trap
-            </span>
-            <span class="list-top-movie-item-view">
-             2 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/phong-than-dat-ky" title="Phong Thần Đát Kỷ">
-           <span class="status">
-            HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/phong-than·dat-ky-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Phong Thần Đát Kỷ
-            </span>
-            <span class="list-top-movie-item-en">
-             The Queen
-            </span>
-            <span class="list-top-movie-item-view">
-             2 lượt xem
+             3 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
