--- a/xem-phim-bo/lan-ket-hon-dau-tien/index.html
+++ b/xem-phim-bo/lan-ket-hon-dau-tien/index.html
@@ -1189,7 +1189,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
              Lượt xem:
             </dt>
             <dd class="movie-dd">
-             3
+             4
             </dd>
             <br/>
            </dl>
@@ -1659,18 +1659,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
        <div class="right-box-content">
         <ul class="list-top-movie" id="list-top-film-week">
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/co-nang-noi-tro-xinh-dep" title="Cô Nàng Nội Trợ Xinh Đẹp">
+          <a class="list-top-movie-link" href="/phim-moi/nhung-ba-noi-tro-kieu-my-phan-1" title="Những Bà Nội Trợ Kiểu Mỹ (Phần 1)">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/co-nang-noi-tro-xinh-dep-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/nhung-ba-noi-tro-kieu-my-phan-1-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Cô Nàng Nội Trợ Xinh Đẹp
+             Những Bà Nội Trợ Kiểu Mỹ (Phần 1)
             </span>
             <span class="list-top-movie-item-en">
-             5년차주부의공개섹스
+             Desperate Housewives (Season 1)
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
@@ -1681,18 +1681,40 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/gia-nhu-da-noi-mot-trieu-lan" title="Giá như đã nói một triệu lần">
+          <a class="list-top-movie-link" href="/phim-moi/canh-sat-pham-toi" title="Cảnh Sát Phạm Tội">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/gia-nhu-da-noi-mot-trieu-lan-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/canh-sat-pham-toi-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Giá như đã nói một triệu lần
+             Cảnh Sát Phạm Tội
             </span>
             <span class="list-top-movie-item-en">
-             Why didn’t I tell you a million times?
+             The Bad Lieutenant: Port of Call - New Orleans
+            </span>
+            <span class="list-top-movie-item-view">
+             3 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/khong-thoa-hiep" title="Không Thỏa Hiệp">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/khong-thoa-hiep-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Không Thỏa Hiệp
+            </span>
+            <span class="list-top-movie-item-en">
+             Blitz
             </span>
             <span class="list-top-movie-item-view">
              1 lượt xem
@@ -1703,21 +1725,21 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/tam-tuyen-luan-hoi" title="Tam Tuyến Luân Hồi">
+          <a class="list-top-movie-link" href="/phim-moi/biet-thu-ma-am" title="Biệt Thự Ma Ám">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/tam-tuyen-luan-hoi-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/biet-thu-ma-am-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Tam Tuyến Luân Hồi
+             Biệt Thự Ma Ám
             </span>
             <span class="list-top-movie-item-en">
-             The River
+             The Haunting
             </span>
             <span class="list-top-movie-item-view">
-             0 lượt xem
+             4 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
@@ -1725,43 +1747,21 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/cuoc-dua-tuyet-chung" title="Cuộc Đua Tuyệt Chủng">
+          <a class="list-top-movie-link" href="/phim-moi/cau-chuyen-do-choi-4" title="Câu Chuyện Đồ Chơi 4">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/cuoc-dua-tuyet-chung-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/cau-chuyen-do-choi-4-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Cuộc Đua Tuyệt Chủng
+             Câu Chuyện Đồ Chơi 4
             </span>
             <span class="list-top-movie-item-en">
-             Racing Extinction
+             Toy Story 4
             </span>
             <span class="list-top-movie-item-view">
-             2 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/mua-hoa-no-gap-lai-nguoi" title="Mùa Hoa Nở Gặp Lại Người">
-           <span class="status">
-            HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/mua-hoa-no-gap-lai-nguoi-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Mùa Hoa Nở Gặp Lại Người
-            </span>
-            <span class="list-top-movie-item-en">
-             Meet You at the Blossom
-            </span>
-            <span class="list-top-movie-item-view">
-             2 lượt xem
+             3 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
