add new website from server na

--- a/xem-phim-bo/pham-nhan-tu-tien/index.html
+++ b/xem-phim-bo/pham-nhan-tu-tien/index.html
@@ -1191,7 +1191,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
              Lượt xem:
             </dt>
             <dd class="movie-dd">
-             5
+             6
             </dd>
             <br/>
            </dl>
@@ -1618,7 +1618,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
              The Blood of Youth
             </span>
             <span class="list-top-movie-item-view">
-             50 lượt xem
+             51 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
@@ -1661,18 +1661,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
        <div class="right-box-content">
         <ul class="list-top-movie" id="list-top-film-week">
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/tru-nuong-cuoi-cung" title="Trù Nương Cuối Cùng">
+          <a class="list-top-movie-link" href="/phim-moi/diep-van-2" title="Diệp Vấn 2">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/tru-nuong-cuoi-cung-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/diep-van-2-2021-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Trù Nương Cuối Cùng
+             Diệp Vấn 2
             </span>
             <span class="list-top-movie-item-en">
-             末代厨娘
+             Ip Man 2
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
@@ -1683,62 +1683,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/ga-chan-de" title="Gã Chăn Dê">
+          <a class="list-top-movie-link" href="/phim-moi/fairy-ranmaru-de-minh-den-cuu-roi-con-tim-cau" title="Fairy Ranmaru – Để mình đến cứu rỗi con tim cậu">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/ga-chan-de-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/fairy-ranmaru-de-minh-den-cuu-roi-con-tim-cau-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Gã Chăn Dê
+             Fairy Ranmaru – Để mình đến cứu rỗi con tim cậu
             </span>
             <span class="list-top-movie-item-en">
-             Goats
-            </span>
-            <span class="list-top-movie-item-view">
-             3 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/la-may-tren-bau-troi-cua-ai-do" title="Là mây trên bầu trời của ai đó">
-           <span class="status">
-            HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/la-may-tren-bau-troi-cua-ai-do-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Là mây trên bầu trời của ai đó
-            </span>
-            <span class="list-top-movie-item-en">
-             Side Seeing The Movie
-            </span>
-            <span class="list-top-movie-item-view">
-             3 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/dai-tong-thieu-nien-chi-2" title="Đại Tống Thiếu Niên Chí 2">
-           <span class="status">
-            HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/dai-tong-thieu-nien-chi-2-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Đại Tống Thiếu Niên Chí 2
-            </span>
-            <span class="list-top-movie-item-en">
-             Young Blood 2
+             Fairy Ranmaru: Anata no Kokoro Otasuke Shimasu
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
@@ -1749,21 +1705,65 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/superman-nguoi-con-cong-san" title="Superman: Người Con Cộng Sản">
+          <a class="list-top-movie-link" href="/phim-moi/oi-troi-thai-tu-dien-ha-cua-toi" title="Ôi Trời Thái Tử Điện Hạ Của Tôi">
            <span class="status">
-            HD Vietsub
+            HD Thuyết Minh
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/superman-nguoi-con-cong-san-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/oi-troi-thai-tu-dien-ha-cua-toi-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Superman: Người Con Cộng Sản
+             Ôi Trời Thái Tử Điện Hạ Của Tôi
             </span>
             <span class="list-top-movie-item-en">
-             Superman: Red Son
+             Oh My Prince
             </span>
             <span class="list-top-movie-item-view">
-             3 lượt xem
+             1 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/linh-hon-bac-2-luat-le-dat-ra-la-de-pha-bo" title="Linh Hồn Bạc 2: Luật Lệ Đặt Ra Là Để Phá Bỏ">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/linh-hon-bac-2-luat-le-dat-ra-la-de-pha-bo-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Linh Hồn Bạc 2: Luật Lệ Đặt Ra Là Để Phá Bỏ
+            </span>
+            <span class="list-top-movie-item-en">
+             Gintama 2: Rules are Made to be Broken
+            </span>
+            <span class="list-top-movie-item-view">
+             1 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/cong-viec-dieu-chung-ta-lam-ca-ngay" title="Công việc: Điều chúng ta làm cả ngày">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/cong-viec-dieu-chung-ta-lam-ca-ngay-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Công việc: Điều chúng ta làm cả ngày
+            </span>
+            <span class="list-top-movie-item-en">
+             Working: What We Do All Day
+            </span>
+            <span class="list-top-movie-item-view">
+             2 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
