add new website from server na

--- a/xem-phim-moi/max-dien-con-duong-tu-than/index.html
+++ b/xem-phim-moi/max-dien-con-duong-tu-than/index.html
@@ -1195,7 +1195,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
              Lượt xem:
             </dt>
             <dd class="movie-dd">
-             3
+             4
             </dd>
             <br/>
            </dl>
@@ -1665,18 +1665,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
        <div class="right-box-content">
         <ul class="list-top-movie" id="list-top-film-week">
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/east-of-the-mountains" title="East of the Mountains">
+          <a class="list-top-movie-link" href="/phim-moi/ac-quy-nha-ke-ben" title="Ác quỷ nhà kế bên">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/east-of-the-mountains-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/ac-quy-nha-ke-ben-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             East of the Mountains
+             Ác quỷ nhà kế bên
             </span>
             <span class="list-top-movie-item-en">
-             East of the Mountains
+             The Devil Next Door
             </span>
             <span class="list-top-movie-item-view">
              3 lượt xem
@@ -1687,18 +1687,40 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/paw-patrol-nhung-chu-cho-cuu-ho" title="PAW Patrol: Những chú chó cứu hộ">
+          <a class="list-top-movie-link" href="/phim-moi/nu-hoang-ve-sau" title="Nữ Hoàng Ve Sầu">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/paw-patrol-nhung-chu-cho-cuu-ho-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/nu-hoang-ve-sau-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             PAW Patrol: Những chú chó cứu hộ
+             Nữ Hoàng Ve Sầu
             </span>
             <span class="list-top-movie-item-en">
-             PAW Patrol
+             In My Mother's Skin
+            </span>
+            <span class="list-top-movie-item-view">
+             2 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/truong-bao-tu" title="Trương Bảo Tử">
+           <span class="status">
+            HD Lồng Tiếng
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/truong-bao-tu-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Trương Bảo Tử
+            </span>
+            <span class="list-top-movie-item-en">
+             Trương Bảo Tử
             </span>
             <span class="list-top-movie-item-view">
              1 lượt xem
@@ -1709,21 +1731,21 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/can-phong-xanh-cua-julie" title="Căn phòng xanh của Julie">
+          <a class="list-top-movie-link" href="/phim-moi/secret-filial-treasure" title="Secret Filial Treasure">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/can-phong-xanh-cua-julie-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/secret-filial-treasure-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Căn phòng xanh của Julie
+             Secret Filial Treasure
             </span>
             <span class="list-top-movie-item-en">
-             Julie's Greenroom
+             Secret Filial Treasure
             </span>
             <span class="list-top-movie-item-view">
-             2 lượt xem
+             1 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
@@ -1731,43 +1753,21 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/hoi-tho-sau-nhat" title="Hơi thở sâu nhất">
+          <a class="list-top-movie-link" href="/phim-moi/happy-new-year-2014" title="Happy New Year 2014">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/hoi-tho-sau-nhat-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/happy-new-year-2014-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Hơi thở sâu nhất
+             Happy New Year 2014
             </span>
             <span class="list-top-movie-item-en">
-             The Deepest Breath
+             Happy New Year
             </span>
             <span class="list-top-movie-item-view">
-             2 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/the-gioi-dong-vat" title="Thế giới động vật">
-           <span class="status">
-            HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/the-gioi-dong-vat-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Thế giới động vật
-            </span>
-            <span class="list-top-movie-item-en">
-             Animal World
-            </span>
-            <span class="list-top-movie-item-view">
-             3 lượt xem
+             1 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
