add new website from server na

--- a/xem-phim-moi/max-dien-con-duong-tu-than/index.html
+++ b/xem-phim-moi/max-dien-con-duong-tu-than/index.html
@@ -1195,7 +1195,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
              Lượt xem:
             </dt>
             <dd class="movie-dd">
-             4
+             5
             </dd>
             <br/>
            </dl>
@@ -1665,18 +1665,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
        <div class="right-box-content">
         <ul class="list-top-movie" id="list-top-film-week">
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/ac-quy-nha-ke-ben" title="Ác quỷ nhà kế bên">
+          <a class="list-top-movie-link" href="/phim-moi/dien-hi-cong-luoc-la-ngoc-canh-vang" title="Diên Hi công lược: Lá ngọc cành vàng">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/ac-quy-nha-ke-ben-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/dien-hi-cong-luoc-la-ngoc-canh-vang-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Ác quỷ nhà kế bên
+             Diên Hi công lược: Lá ngọc cành vàng
             </span>
             <span class="list-top-movie-item-en">
-             The Devil Next Door
+             Yanxi Palace: Princess Adventures
             </span>
             <span class="list-top-movie-item-view">
              3 lượt xem
@@ -1687,18 +1687,62 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/nu-hoang-ve-sau" title="Nữ Hoàng Ve Sầu">
+          <a class="list-top-movie-link" href="/phim-moi/dieu-nho-be-mang-ten-tinh-yeu" title="Điều Nhỏ Bé Mang Tên Tình Yêu">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/nu-hoang-ve-sau-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/dieu-nho-be-mang-ten-tinh-yeu-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Nữ Hoàng Ve Sầu
+             Điều Nhỏ Bé Mang Tên Tình Yêu
             </span>
             <span class="list-top-movie-item-en">
-             In My Mother's Skin
+             A Little Thing About Love
+            </span>
+            <span class="list-top-movie-item-view">
+             1 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/tung-hoanh-tu-hai" title="Tung hoành tứ hải">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/tung-hoanh-tu-hai-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Tung hoành tứ hải
+            </span>
+            <span class="list-top-movie-item-en">
+             Once a Thief
+            </span>
+            <span class="list-top-movie-item-view">
+             7 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/khinh-cong" title="Khinh Công">
+           <span class="status">
+            FHD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/khinh-cong-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Khinh Công
+            </span>
+            <span class="list-top-movie-item-en">
+             輕·功
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
@@ -1709,65 +1753,21 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/truong-bao-tu" title="Trương Bảo Tử">
-           <span class="status">
-            HD Lồng Tiếng
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/truong-bao-tu-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Trương Bảo Tử
-            </span>
-            <span class="list-top-movie-item-en">
-             Trương Bảo Tử
-            </span>
-            <span class="list-top-movie-item-view">
-             1 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/secret-filial-treasure" title="Secret Filial Treasure">
+          <a class="list-top-movie-link" href="/phim-moi/con-sot-dem-thu-bay" title="Cơn Sốt Đêm Thứ Bảy">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/secret-filial-treasure-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/con-sot-dem-thu-bay-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Secret Filial Treasure
+             Cơn Sốt Đêm Thứ Bảy
             </span>
             <span class="list-top-movie-item-en">
-             Secret Filial Treasure
+             Saturday Night Fever
             </span>
             <span class="list-top-movie-item-view">
-             1 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/happy-new-year-2014" title="Happy New Year 2014">
-           <span class="status">
-            HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/happy-new-year-2014-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Happy New Year 2014
-            </span>
-            <span class="list-top-movie-item-en">
-             Happy New Year
-            </span>
-            <span class="list-top-movie-item-view">
-             1 lượt xem
+             0 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
