add new website from server na

--- a/xem-phim-bo/tro-choi-cua-than/index.html
+++ b/xem-phim-bo/tro-choi-cua-than/index.html
@@ -1193,7 +1193,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
              Lượt xem:
             </dt>
             <dd class="movie-dd">
-             1
+             2
             </dd>
             <br/>
            </dl>
@@ -1728,40 +1728,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
        <div class="right-box-content">
         <ul class="list-top-movie" id="list-top-film-week">
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/chia-se-ban-trai-voi-me" title="Chia Sẻ Bạn Trai Với Mẹ">
+          <a class="list-top-movie-link" href="/phim-moi/the-concubine" title="The Concubine">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/chia-se-ban-trai-voi-me-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/the-concubine-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Chia Sẻ Bạn Trai Với Mẹ
+             The Concubine
             </span>
             <span class="list-top-movie-item-en">
-             엄마와 남친공유
-            </span>
-            <span class="list-top-movie-item-view">
-             4 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/lo-luyen-o-kota-phan-3" title="Lò Luyện Ở Kota (Phần 3)">
-           <span class="status">
-            HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/कोटा-फ़ैक्ट्री-phan-3-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Lò Luyện Ở Kota (Phần 3)
-            </span>
-            <span class="list-top-movie-item-en">
-             Kota Factory (Season 3)
+             The Concubine
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
@@ -1772,18 +1750,40 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/yeu-lan-nua" title="Yêu Lần Nữa">
+          <a class="list-top-movie-link" href="/phim-moi/don-than-nam-nu-1" title="Đơn Thân Nam Nữ 1">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/yeu-lan-nua-2022-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/don-than-nam-nu-1-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Yêu Lần Nữa
+             Đơn Thân Nam Nữ 1
             </span>
             <span class="list-top-movie-item-en">
-             Fall In Love Again
+             Don't Go Breaking My Heart
+            </span>
+            <span class="list-top-movie-item-view">
+             1 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/nguoi-bat-mong" title="Người Bắt Mộng">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/nguoi-bat-mong-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Người Bắt Mộng
+            </span>
+            <span class="list-top-movie-item-en">
+             Desire Catcher
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
@@ -1794,18 +1794,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/che-part-one" title="Che: Part One">
+          <a class="list-top-movie-link" href="/phim-moi/su-huy-diet-phan-2" title="Sự Hủy Diệt (Phần 2)">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/che-part-one-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/su-huy-diet-phan-2-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Che: Part One
+             Sự Hủy Diệt (Phần 2)
             </span>
             <span class="list-top-movie-item-en">
-             Che: Part One
+             Star Trek: Picard (Season 2)
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
@@ -1816,21 +1816,21 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/gai-dep-say-long-nguoi" title="Gái Đẹp Say Lòng Người">
+          <a class="list-top-movie-link" href="/phim-moi/to-end-all-war-oppenheimer-the-atomic-bomb" title="To End All War: Oppenheimer &amp; the Atomic Bomb">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/gai-dep-say-long-nguoi-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/to-end-all-war-oppenheimer-and-the-atomic-bomb-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Gái Đẹp Say Lòng Người
+             To End All War: Oppenheimer &amp; the Atomic Bomb
             </span>
             <span class="list-top-movie-item-en">
-             This Charming Girl
+             To End All War: Oppenheimer &amp; the Atomic Bomb
             </span>
             <span class="list-top-movie-item-view">
-             0 lượt xem
+             2 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
